objects/ssot__RecordActionSelectableItemExtract__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionId__c</fullName>
        <label>Action Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeploymentItemName__c</fullName>
        <label>Deployment Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>RecordActionSelItemExtractId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordActionDeploymentId__c</fullName>
        <label>Record Action Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordActionDeploymentItemType__c</fullName>
        <label>Record Action Deployment Item Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordActionDeploymentType__c</fullName>
        <label>Record Action Deployment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordActionSelectableItemName__c</fullName>
        <label>Record Action Selectable Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>